--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -524,32 +524,32 @@
       <div class="finally__container">
         <form class="form" id="form" name="form">
           <div class="input-cnt-1">
-            <div class="input-cnt-1_cubik1"></div>
+            <div class="input-cnt-1_cubik1" id="input-cnt-1_cubik1"></div>
             <input placeholder="Имя" type="text" class="form_name" id="name" name="name">
-            <div class="input-cnt-1_cubik2"></div>
+            <div class="input-cnt-1_cubik2" id="input-cnt-1_cubik2"></div>
             <input placeholder="Телефон" type="tel" class="form_phone" id="telephone" name="telephone">
 
           </div>
           <div class="input-cnt-2">
-            <div class="input-cnt-2_cubik1"></div>
+            <div class="input-cnt-2_cubik1" id="input-cnt-2_cubik1"></div>
             <input placeholder="Ваша компания" type="text" class="form_company" id="company" name="company">
-            <div class="input-cnt-2_cubik2"></div>
+            <div class="input-cnt-2_cubik2" id="input-cnt-2_cubik2"></div>
             <input placeholder="Email" type="email" class="form_mail" id="email" name="email">
           </div>
           <div class="input-cnt-3">
-            <div class="input-cnt-3_cubik1"></div>
+            <div class="input-cnt-3_cubik1" id="input-cnt-3_cubik1"></div>
             <input placeholder="Введите ваш бюджет" type="text" class="form_money" id="money">
-            <div class="input-cnt-3_cubik2"></div>
+            <div class="input-cnt-3_cubik2" id="input-cnt-3_cubik2"></div>
           </div>
-          <div class="wrapper_textarea">
-            <div class="input-cnt-4_cubik1"></div>
+          <div class="wrapper_textarea" id="textarea_wrapper">
+            <div class="input-cnt-4_cubik1" id="input-cnt-4_cubik1"></div>
             <textarea placeholder="Сообщение" class="form_text" name="message" id="message"></textarea>
             <label class="input-file">
               <input type="file" name="file" id="file">
               <span class="input-file-text">Прикрепить файл <img src="img/Vector.svg" alt="выбор файла" height="15px"
                                                                  width="15px"/></span>
             </label>
-            <div class="input-cnt-4_cubik2"></div>
+            <div class="input-cnt-4_cubik2" id="input-cnt-4_cubik2"></div>
           </div>
           <div style="margin-bottom: 30px;" onclick="sendMessage()">
             <div class="btn">
